feat: add SubmitButton style

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,6 +3,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
@@ -23,5 +24,6 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family:
-    Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+    ui-monospace, Menlo, Consolas, Monaco, 'Adwaita Mono', 'Liberation Mono',
+    'Lucida Console', monospace;
 }
