--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -10,6 +10,8 @@
   --color-success-foreground: var(--success-foreground);
   --color-error: var(--error);
   --color-error-foreground: var(--error-foreground);
+  --color-danger: var(--danger);
+  --color-danger-foreground: var(--danger-foreground);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -58,6 +60,8 @@
   --success-foreground: oklch(62.7% 0.194 149.214);
   --error: oklch(94.137% 0.02976 12.379);
   --error-foreground: oklch(58.581% 0.22205 17.569);
+  --danger: oklch(93.208% 0.04613 65.056);
+  --danger-foreground: oklch(66.6% 0.179 58.318);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
@@ -99,7 +103,9 @@
     --success: oklch(21.574% 0.02591 149.063);
     --success-foreground: oklch(72.276% 0.19199 149.6);
     --error: oklch(21.165% 0.07487 12.323);
-    --error-foreground: oklch(71.917% 0.16898 13.401);
+    --error-foreground: oklch(72.362% 0.19094 14.318);
+    --danger: oklch(22.924% 0.0505 70.724);
+    --danger-foreground: oklch(82.8% 0.189 84.429);
     --card: oklch(0.205 0 0);
     --card-foreground: oklch(0.985 0 0);
     --popover: oklch(0.205 0 0);
